homepage, svg images

--- a/index.html
+++ b/index.html
@@ -68,26 +68,73 @@
 			</div>
 		</div>
 	</header>
-
-	<section class="bg-yellow pa3 pa5-ns">
-		<div class="w-main flex flex-column flex-row-ns">
-			<div class="bg-green w-100 w-50-ns">
-				<h2>This is header</h2>
-				<h2>Subheader text goes here</h2>
-				<a class="f6 link dim br3 ph3 pv2 mb2 dib white bg-black mv4" href="#0">Button Text</a>
+	<section class="pa3 ph5-ns">
+		<div class="w-main">
+			<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Problem</h1>
+			<p class="lh-copy fw3">
+	Tehnologije za prepoznavanje lica i predmeta u javnom prostoru počivaju na pretpostavci da smo svi mogući kriminalci – snimaju naše kretanje i susrete, analiziraju naše ponašanje, predviđaju naše postupke. Potpuni gubitak anonimnosti jeste lišavanje slobode: svest da smo pod nadzorom drastično menja naše odluke. Sistem pametnog nadzora uvodi se u Beograd bez učešća javnosti, bez razgovora o mogućim posledicama, mimo načela propisanih zakonima i Ustavom.
+			</p>
+		</div>
+	</section>
+	<section class="pa3 ph5-ns">
+		<div class="w-main flex flex-column flex-row-ns justify-center-ns bt b--yellow pa3 pt5-ns">
+			<div class="w-100 w-40-ns pl5-ns">
+				<h2 class="pv2 pb4-ns normal section-title-small checkmark">Šta znamo?</h2>
+				<ul class="ml3 yellow-bull-list fw3">
+					<li class="pb3-ns">Biće ih hiljade</li>
+					<li class="pb3-ns">Prepoznaju lica i stvari</li>
+					<li class="pb3-ns">Već se uveliko postavljaju</li>
+					<li class="pb3-ns">Nije bilo javne rasprave</li>
+				</ul>
 			</div>
 
-			<div class="bg-light-blue w-100 w-50-ns">
-				<h2>This is header</h2>
-				<h2>Subheader text goes here</h2>
-				<a class="f6 link dim br3 ph3 pv2 mb2 dib white bg-black mv4" href="#0">Button Text</a>
+			<div class="w-100 w-40-ns pl5-ns">
+				<h2 class="pv2 pb4-ns normal section-title-small xmark">Šta ne znamo?</h2>
+				<ul class="ml3 yellow-bull-list fw3">
+					<li class="pb3-ns">Pravi razlog za masovni nadzor</li>
+					<li class="pb3-ns">Sigurnost sistema</li>
+					<li class="pb3-ns">Koliko nas koštaju</li>
+					<li class="pb3-ns">Tačan broj i lokacije</li>
+				</ul>
 			</div>
 		</div>
 	</section>
 
-	<main class="bg-light-blue pa3 pa5-ns">
-		<section class="w-main bg-washed-red">
-			<h2 class="f2">What's happening?</h2>
+	<main class="pa3 pa5-ns">
+		<section class="pa3 ph5-ns">
+			<div class="w-main bt b--yellow pt5-ns">
+				<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Tehnologija</h1>
+				<div class="flex flex-column flex-row-ns justify-between-ns pt4-ns">
+					<div class="w-100 w-20-ns">
+						<div class="card-holder flex flex-column ph4">
+							<h4 class="card-title normal mb2 mb3-ns">Kamere</h4>
+							<img src="./assets/1_Kamere@2x.svg" />
+							<div class="card-desc mt3-ns fw3">Kamere na ulicama snimaju 24/7, detektuju lica i objekte i poseduju naprednu optiku koja može da zumira i snima noću</div>
+						</div>
+					</div>
+					<div class="w-100 w-20-ns flex flex-column">
+						<div class="card-holder flex flex-column ph4">
+							<h4 class="card-title normal mb2 mb3-ns">Monitoring</h4>
+							<img src="./assets/2_Monitoring@2x.svg" />
+							<div class="card-desc mt3-ns fw3">Feed i informacije iz kamera se prate u realnom vremenu od strane MUP</div>
+						</div>
+					</div>
+					<div class="w-100 w-20-ns flex flex-column">
+						<div class="card-holder flex flex-column ph4">
+							<h4 class="card-title normal mb2 mb3-ns">Skladištenje</h4>
+							<img src="./assets/3_sklasistenje@2x.svg" />
+							<div class="card-desc mt3-ns fw3">Podaci i rezultati analiza se čuvaju za dalje potrebe</div>
+						</div>
+					</div>
+					<div class="w-100 w-20-ns flex flex-column">
+						<div class="card-holder flex flex-column ph4">
+							<h4 class="card-title normal mb2 mb3-ns">Analiza</h4>
+							<img src="./assets/4_analiza@2x.svg" />
+							<div class="card-desc mt3-ns fw3">Napredna analiza i pretraga lica i objekata po zadatim parametrima</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 
 		<section class="w-main bg-washed-green mt5">
