--- a/pravo.html
+++ b/pravo.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Hiljade.kamera.rs - Pravo</title>
+		<title>Hiljade.kamera.rs - Zakon & Društvo</title>
 		<link rel="icon" type="image/x-icon" href="./assets/hiljadekamlogo-01.svg">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./style/tachyons.css">
@@ -27,12 +27,12 @@
 		    <img src="./assets/logo.svg">
 		</a>
 		<div id="menu">
-			<a href="index.html">Home</a>
+			<a href="index.html">Početna stranica</a>
 			<a href="hronologija.html">Hronologija</a>
 			<a href="rizici.html">Pretnje</a>
-			<a href="pravo.html">Pravo</a>
-			<a href="svet.html">Svet</a>
-			<a href="mediji.html">Izvori i mediji</a>
+			<a href="pravo.html">Zakon & Društvo</a>
+			<a href="svet.html">Priče iz sveta</a>
+			<a href="mediji.html">Mediji</a>
 		</div>
 		
 		<a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
@@ -42,10 +42,10 @@
 
 	<section class="pa3 ph5-ns pt5-ns pb5-ns">
 		<div class="w-main">
-			<h1 class="section-title f2 fw4 mt4-ns mb4-ns ml5">Pravo</h1>
+			<h1 class="section-title f2 fw4 mt4-ns mb4-ns ml5">Zakon & Društvo</h1>
+			<p class="ml5">Uvođenje sistema pametnog video nadzora u Beogradu je nezakonito i štetno po društvo.</p>
 		</div>
 	</section>
-	
     <div id="legal-issues"></div>
 	<section class="ph3 template">
 		<div class="w-main">
