--- a/rizici.html
+++ b/rizici.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Hiljade.kamera.rs - Rizici</title>
+		<title>Hiljade.kamera.rs - Pretnje</title>
 		<link rel="icon" type="image/x-icon" href="./assets/hiljadekamlogo-01.svg">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./style/tachyons.css">
@@ -27,12 +27,12 @@
 		    <img src="./assets/logo.svg">
 		</a>
 		<div id="menu">
-			<a href="index.html">Home</a>
+			<a href="index.html">Početna stranica</a>
 			<a href="hronologija.html">Hronologija</a>
 			<a href="rizici.html">Pretnje</a>
-			<a href="pravo.html">Pravo</a>
-			<a href="svet.html">Svet</a>
-			<a href="mediji.html">Izvori i mediji</a>
+			<a href="pravo.html">Zakon & Društvo</a>
+			<a href="svet.html">Priče iz sveta</a>
+			<a href="mediji.html">Mediji</a>
 		</div>
 		
 		<a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
@@ -42,16 +42,16 @@
 
 	<section class="pa3 ph5-ns pt5-ns pb5-ns">
 		<div class="w-main">
-			<h1 class="section-title f2 fw4 mt4-ns mb4-ns ml5">Rizici</h1>
+			<h1 class="section-title f2 fw4 mt4-ns mb4-ns ml5">Pretnje</h1>
 		</div>
 	</section>
 
 	<div id="risks"></div>
 	<section class="ph3 template">
 		<div class="w-main">
-			<div class="source-box pv3 pl4-ns pt5-ns pb4-ns bt b--yellow flex flex-column flex-row-ns">
+			<div class="pv3 pl4-ns pt5-ns pb4-ns bt b--yellow flex flex-column flex-row-ns">
 				<div class="w-100 w-25-ns mr2 pv3-l tc">
-					<img class="risk-image" src="">
+					<img class="risk-image" src="" style="width: 50%;">
 				</div>
 				<div class="risk-details w-100 w-75-ns pv3-l">
 					<h3 class="risk-title lh-title f4 fw6"></h3>
@@ -72,15 +72,15 @@
 			}
 		(function() {
 		    let risks = [{
-				image: "./assets/Ico_Panoptikon.png",
+				image: "./assets/Ico_Panoptikon@2x.svg",
 				title: "Panoptikon",
 				excerpt: "<p>Ideja o centralizaciji totalnog nadzora starija je od sofisticiranih kompjuterskih sistema, a vezuje se za <a href='https://sr.wikipedia.org/wiki/%D0%9F%D0%B0%D0%BD%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%BE%D0%BD' target='_blank'>predlog novog dizajna zatvora s kraja 18. veka</a>. Prema tom nacrtu, svakodnevni život zatvorenika prati se sa centralne kule u kojoj može, a i ne mora boraviti neko ko ih posmatra. Sama svest da u bilo kom trenutku mogu biti uočeni, drastično menja ponašanje zatvorenika.</p><br><p>Grad koji svoje stanovnike tretira kao kažnjeničku koloniju nije bezbedan, već totalitaran. Lišavanje slobode zbog mogućih prestupa pretvara naš život u distopiju, a onima koji nas nadziru daje previše nekontrolisane moći.</p>"
 			}, {
-				image: "./assets/Ico_Zloupotrebe.png",
+				image: "./assets/Ico_Zloupotrebe @2x.svg",
 				title: "Zloupotrebe",
 				excerpt: "<p>Tačno je, postoji rizik da neko pređe ulicu na crveno, pa čak i da obije trafiku i da za to prođe nekažnjeno, jer državna uprava štedi na broju zaposlenih u policiji i njihovim platama. Međutim, kako se taj rizik meri sa rizicima zloupotrebe tehnologije koja omogućava da se svi građani u javnom prostoru neprestano snimaju?</p><br><p>Iz otkrića Edvarda Snoudena i drugih izveštaja, saznali smo da su se i najskuplji sistemi u zemljama sa visoko razvijenim tehnologijama za nadzor, zloupotrebljavali za privatne obračune sa konkurencijom, ucene bivših prijatelja i praćenje bivših supružnika. Države ih zloupotrebljavaju za kontrolu političkih protivnika kod kuće i suparničkih vlada u svetu. Kompanije ih zloupotrebljavaju za proizvodnju velikih setova ličnih podataka, da bi dalje preprodavale našu pažnju i ponašanje na netu.</p><br><p>Mi još nismo rešili zloupotrebe manje naprednih tehnologija. Policija i službe bezbednosti direktno pristupaju metapodacima o digitalnim komunikacijama građana Srbije stotinama hiljada puta godišnje i to samo kod jednog mobilnog operatora - na šta su <a href='https://www.b92.net/info/vesti/index.php?yyyy=2012&mm=07&dd=06&nav_category=12&nav_id=624375' target='_blank'>Poverenik i Zaštitnik građana već upozoravali</a>.</p>"
 			}, {
-				image: "./assets/Ico_Algoritma.png",
+				image: "./assets/Ico_Algoritma@2x.svg",
 				title: "Greške nepogrešivog algoritma",
 				excerpt: "<p>Iz zemalja sa dužim iskustvom primene pametnog nadzora stalno stižu upozorenja: lažni pozitivni rezultati poređenja lica snimljenih na ulici sa licima iz baze osuđenih ili osumnjičenih, kao i visok stepen pogrešnog prepoznavanja lica žena i pripadnika manjinskih zajednica, mogu dovesti do ozbiljnih posledica po lična prava građana. Jedan profesor iz Argentine je <a href='https://edri.org/dangerous-by-design-a-cautionary-tale-about-facial-recognition/' target='_blank'>pogrešno identifikovan kao osumnjičeni za oružanu pljačku</a> koja se desila pre više od 15 godina jer su ga snimile pametne kamere na stanici metroa gde je čekao prevoz, posle čega je završio u policijskoj stanici.</p>"
 			}];
