homepage cards section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 	</section>
 	<section class="pa3 ph5-ns">
 		<div class="w-main flex flex-column flex-row-ns justify-center-ns bt b--yellow pa3 pt5-ns">
-			<div class="w-100 w-40-ns pl5-ns">
-				<h2 class="pv2 pb4-ns normal section-title-small checkmark">Šta znamo?</h2>
+			<div class="w-100 w-40-ns pl5-l">
+				<h2 class="pv2 pb4-l normal section-title-small checkmark">Šta znamo?</h2>
 				<ul class="ml3 yellow-bull-list fw3">
 					<li class="pb3-ns">Biće ih hiljade</li>
 					<li class="pb3-ns">Prepoznaju lica i stvari</li>
@@ -70,8 +70,8 @@
 				</ul>
 			</div>
 
-			<div class="w-100 w-40-ns pl5-ns">
-				<h2 class="pv2 pb4-ns normal section-title-small xmark">Šta ne znamo?</h2>
+			<div class="w-100 w-40-ns pl5-l">
+				<h2 class="pv2 pb4-l normal section-title-small xmark">Šta ne znamo?</h2>
 				<ul class="ml3 yellow-bull-list fw3">
 					<li class="pb3-ns">Pravi razlog za masovni nadzor</li>
 					<li class="pb3-ns">Sigurnost sistema</li>
@@ -87,38 +87,78 @@
 			<div class="w-main bt b--yellow pt5-ns">
 				<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Tehnologija</h1>
 				<div class="flex flex-column flex-row-ns justify-between-ns pt4-ns">
-					<div class="w-100 w-20-ns">
-						<div class="card-holder flex flex-column ph4">
+					<div class="w-100 w-20-l flex flex-column">
+						<div class="flex flex-column flex-auto ph3-ns">
 							<h4 class="card-title normal mb2 mb3-ns">Kamere</h4>
-							<img src="./assets/1_Kamere@2x.svg" />
-							<div class="card-desc mt3-ns fw3">Kamere na ulicama snimaju 24/7, detektuju lica i objekte i poseduju naprednu optiku koja može da zumira i snima noću</div>
+							<div class="card-image">
+								<img src="./assets/1_Kamere@2x.svg" />
+								<div class="card-img-arrow flex justify-around">
+									<img src="./assets/Arrow@2x.svg"/>
+								</div>
+							</div>
+							<p class="card-desc ph4 pv3-ns fw3">Kamere na ulicama snimaju 24/7, detektuju lica i objekte i poseduju naprednu optiku koja može da zumira i snima noću</p>
+						</div>
+						<div class="card-pill-holder">
+							<span class="card-pill br3 pa1">NIVO: Kamera</span>
+							<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Modeli pametnih kamera: IPC6625-Z30 IPC6225-VRZ-ES</span>
 						</div>
 					</div>
-					<div class="w-100 w-20-ns flex flex-column">
-						<div class="card-holder flex flex-column ph4">
+					<div class="w-100 w-20-l flex flex-column">
+						<div class="flex flex-column flex-auto ph3-ns">
 							<h4 class="card-title normal mb2 mb3-ns">Monitoring</h4>
-							<img src="./assets/2_Monitoring@2x.svg" />
-							<div class="card-desc mt3-ns fw3">Feed i informacije iz kamera se prate u realnom vremenu od strane MUP</div>
+							<div class="card-image">
+								<img src="./assets/2_Monitoring@2x.svg" />
+								<div class="card-img-arrow flex justify-around">
+									<img src="./assets/Arrow@2x.svg"/>
+								</div>
+							</div>
+							<p class="card-desc ph4 pv3-ns fw3">Feed i informacije iz kamera se prate u realnom vremenu od strane MUP</p>
+						</div>
+						<div class="card-pill-holder">
+							<span class="card-pill br3 pa1">NIVO: Komandno-operativni centar</span>
+							<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za upravljanje: VCN3020</span>
 						</div>
 					</div>
-					<div class="w-100 w-20-ns flex flex-column">
-						<div class="card-holder flex flex-column ph4">
+					<div class="w-100 w-20-l flex flex-column">
+						<div class="flex flex-column flex-auto ph3-ns">
 							<h4 class="card-title normal mb2 mb3-ns">Skladištenje</h4>
-							<img src="./assets/3_sklasistenje@2x.svg" />
-							<div class="card-desc mt3-ns fw3">Podaci i rezultati analiza se čuvaju za dalje potrebe</div>
+							<div class="card-image">
+								<img src="./assets/3_sklasistenje@2x.svg" />
+								<div class="card-img-arrow flex justify-around">
+									<img src="./assets/Double arrow @2x.svg"/>
+								</div>
+							</div>
+							<p class="card-desc ph4 pv3-ns fw3">Podaci i rezultati analiza se čuvaju za dalje potrebe</p>
+						</div>
+						<div class="card-pill-holder">
+							<span class="card-pill br3 pa1">NIVO: Server sala</span>
+							<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za skladištenje OceanStor</span>
 						</div>
 					</div>
-					<div class="w-100 w-20-ns flex flex-column">
-						<div class="card-holder flex flex-column ph4">
+					<div class="w-100 w-20-l flex flex-column">
+						<div class="flex flex-column flex-auto ph3-ns">
 							<h4 class="card-title normal mb2 mb3-ns">Analiza</h4>
-							<img src="./assets/4_analiza@2x.svg" />
-							<div class="card-desc mt3-ns fw3">Napredna analiza i pretraga lica i objekata po zadatim parametrima</div>
+							<div class="card-image">
+								<img src="./assets/4_analiza@2x.svg" />
+							</div>
+							<p class="card-desc ph4 pv3-ns fw3">Napredna analiza i pretraga lica i objekata po zadatim parametrima</p>
+						</div>
+						<div class="card-pill-holder">
+							<span class="card-pill br3 pa1">NIVO: Komandno-operativni centar</span>
+							<span class="db c-pill-label fw3 ph3 ph4-l mt2-ns">Sistem za analitiku VCM5020</span>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
+		<section class="pa3 ph5-ns">
+			<div class="w-main bt b--yellow pt5-ns">
+				<h1 class="section-title f2 fw4 mt4-ns mb4-ns">Akcija</h1>
+				<p class="lh-copy fw3">
+					Postoji više načina na koje odmah možeš da se uključiš u borbu protiv masovnog video nadzora.
+				</p>
+			</div>
+		</section>
 		<section class="w-main bg-washed-green mt5">
 			<h2>What's the problem?</h2>
 		</section>
