--- a/hronologija.html
+++ b/hronologija.html
@@ -27,12 +27,12 @@
 		    <img src="./assets/logo.svg">
 		</a>
 		<div id="menu">
-			<a href="index.html">Home</a>
+			<a href="index.html">Početna stranica</a>
 			<a href="hronologija.html">Hronologija</a>
 			<a href="rizici.html">Pretnje</a>
-			<a href="pravo.html">Pravo</a>
-			<a href="svet.html">Svet</a>
-			<a href="mediji.html">Izvori i mediji</a>
+			<a href="pravo.html">Zakon & Društvo</a>
+			<a href="svet.html">Priče iz sveta</a>
+			<a href="mediji.html">Mediji</a>
 		</div>
 		
 		<a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
@@ -60,7 +60,12 @@
 			</div>
 		</div>
 	</section>
-
+	<footer class="pa3 pa5-ns w-100">
+		<div class="ph4 ml5-ns ml1-m mb3 dib w-30-ns w-70-m w-90 relative v-mid">
+			<h1>Ko smo mi?</h1>
+		</div>
+		<div class="pr3 dib w-60-ns w-80-m w-90 v-mid b">Mi smo zajednica pojedinaca i organizacija koje se zalažu za odgovorno korišćenje tehnologije za nadzor. Cilj nam je zaštita privatnosti i dostojanstva svih građana.</div>
+	</footer>
 	<script>
 	
 			function toggleMenu() {
